# uwv-simulator

./: .gitignore  LICENSE  README.md
docs/: uwv-ns.md  uwv-simulator-structure.drawio
uwv_control/: CMakeLists.txt  README.md  package.xml
uwv_control/config/: pid_gains.yaml
uwv_control/include/: README.md  pid_rotate.h  pid_translate.h  stoppable_thread.h
uwv_control/launch/: sauvc_pool.launch
uwv_control/src/common/: README.md  pid_rotate.cpp  pid_translate.cpp
uwv_control/src/vec6/: CMakeLists.txt  README.md  vec6_config.h  vec6_controller.cpp  vec6_controller.h
uwv_control/src/vec6/common/: README.md  terminal_getch.cpp  terminal_getch.h  vec6_comms.cpp  vec6_comms.h  vec6_config.h  vec6_controller.cpp  vec6_controller.h  vec6_hardwarecontroller.cpp  vec6_hardwarecontroller.h  vec6_simcontroller.cpp  vec6_simcontroller.h
uwv_control/src/vec6/remote_control/: CMakeLists.txt  README.md  hardware_remote_control.cpp  hardware_remote_control.h  rc_config.h  sim_remote_control.cpp  sim_remote_control.h
uwv_control/src/vec6/sauvc_tasks/: CMakeLists.txt  README.md  sim_sampletasks_exe.cpp  sim_sampletasks_exe.h  sim_task_list.cpp  sim_task_list.h  tasks.cpp  tasks.h
uwv_description/: CMakeLists.txt  README.md  package.xml
uwv_description/config/: README.md  urdf.rviz
uwv_description/launch/: README.md  display.launch
uwv_description/meshes/: README.md
uwv_description/meshes/vec6/: vec6_body_collision.STL  vec6_body_visual.STL  vec6_camera.STL  vec6_thruster_collision.STL
uwv_description/plugins/: README.md
uwv_description/src/plugin_depth_sensor/: CMakeLists.txt  README.md  plugin_depth.cpp  plugin_depth.h
uwv_description/urdf/: README.md  vec6.xacro
uwv_env/: CMakeLists.txt  README.md  package.xml
uwv_env/launch/: README.md  uwv_env.launch
uwv_env/meshes/: README.md
uwv_env/meshes/sauvc_pool/: gate_port.STL  gate_star.STL  gate_top.STL  mat.STL  pinger.STL  start.STL  task1_flare.STL  task4_ball_collision.STL  task4_ball_visual.STL  task4_base.STL  tub.STL
uwv_env/models/sauvc_pool/: model.config  model.sdf
uwv_env/models/sauvc_pool/materials/scripts/: sauvc_pool.material
uwv_env/models/start_point/: model.config  model.sdf
uwv_env/urdf/: README.md
uwv_env/urdf/sauvc_pool/: README.md  q_gate.xacro  task1_flare.xacro  task1_gate.xacro  task2_mat.xacro  task4_ball.xacro  task4_no_pinger.xacro  task4_pinger.xacro
uwv_env/worlds/: sauvc_pool.world
