<package format="2">
  <name>uwv_control</name>
  <version>1.0.0</version>

  <description>
  Contains files related to controlling the underwater vehicle. 
  It is the main ROS package from which launch files realted to testing and final 
  implementation are executed.
  </description>

  <author email="auv.society@iiitdm.ac.in">Mayank N. Mehta</author>

  <maintainer email="auv.society@iiitdm.ac.in">Mayank N. Mehta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>darknet_ros_msgs</depend> -->

  <exec_depend>uwv_description</exec_depend>
  <exec_depend>uwv_env</exec_depend>
  
</package>
