<package format="2">
  <name>uwv_description</name>
  <version>1.0.0</version>

  <description>Contains files and models describing the underwater vehicle and the sensors attached to it.</description>

  <author email="auv.society@iiitdm.ac.in">Mayank N. Mehta</author>

  <maintainer email="auv.society@iiitdm.ac.in">Mayank N. Mehta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend> roscpp </depend>
  <depend> std_msgs </depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>freefloating_gazebo</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
  
</package>
